Bugfix: Add print media query for comment modal alignment:
- Align comment display to upper-left of page to maximize information displayed on screen.
- Remove border so it does not intersect with comment overflow
- Ensure comment overflow is printed

--- a/app/assets/stylesheets/design/comments/creation.scss
+++ b/app/assets/stylesheets/design/comments/creation.scss
@@ -790,3 +790,17 @@ div.alternative-comment-modal {
     }
   }
 }
+
+@media print {
+
+  #fr_modal.print_modal {
+    border: none !important;
+    position: absolute !important;
+    left: 5px !important;
+    top: 5px !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: visible !important;
+  }
+
+}
